[project]
name = "runpod-mcp-server"
version = "0.2.0"
description = "MCP server for Runpod Seedream and Nano Banana image APIs"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
runpod-mcp-server = "runpod_mcp_server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["runpod_mcp_server"]
