[project]
name = "runpod-mcp-server"
version = "0.2.1"
description = "MCP server for Runpod Seedream and Nano Banana image APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jashwanth Peddisetty"}
]
keywords = ["mcp", "runpod", "image-generation", "ai", "claude", "seedream", "nano-banana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jashwanth0712/runpod-image-mcp"
Repository = "https://github.com/jashwanth0712/runpod-image-mcp"
Issues = "https://github.com/jashwanth0712/runpod-image-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
runpod-mcp-server = "runpod_mcp_server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["runpod_mcp_server"]
